--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <link rel="stylesheet" href="./styles.css">
     <canvas id="myCanvas"></canvas>  <!-- add elements before adding the scripts or else it wont work-->
-
+    <script src="./sensor.js"></script>
+    <script src="./utils.js"></script>
+    <script src="./road.js"></script>
     <script src="./controls.js"></script>
     <script src="./car.js"></script>
     <script src="./app.js"></script>
