--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <link rel="stylesheet" href="./styles.css">
-    <canvas id="myCanvas"></canvas>  <!-- add elements before adding the scripts or else it wont work-->
+    <canvas id="carCanvas"></canvas>  <!-- add elements before adding the scripts or else it wont work-->
+    <div id="verticalButton">
+        <button onclick="save()">👌</button>
+        <button onclick="discard()">👎</button>
+    </div>
+    <canvas id="networkCanvas"></canvas>
+    <script src="./visualizer.js"></script>
+    <script src="./network.js"></script>
     <script src="./sensor.js"></script>
     <script src="./utils.js"></script>
     <script src="./road.js"></script>
